--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <h1>¿Lista de regalos?</h1>
     <h1>¿Recomendacion de hospedaje?</h1>
     <h1>Confirmar asistencia</h1>
+    <a href="sobre.html">jdjdj</a>
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="js/load.js"></script>
 <script src="js/cuenta.js"></script>
