--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section id="regalos">
         <div class="containeregalos">
         <h1>Lista de regalos</h1>
-        <p>Contar con tu presencia es lo más importante para nosotros, pero si gustas hacernos un regalo, puedes hacerlo de forma economica mediante sobres que se daran durante la recepcion o si gustas otro tipo de regalo, aqui te dejamos algunas sugerencias </p>
+        <p>Contar con tu presencia es lo más importante para nosotros, pero si gustas hacernos un presente, puedes hacerlo de forma economica mediante sobres que se daran durante la recepcion o si gustas otro tipo de regalo, aqui te dejamos algunas sugerencias </p>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
 
