--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="cf">
             <div class="cft">
-            <p>La recepcion se llevara acabo el mismo día a las 7:00 pm, dando inicio con el protocolo a las 7:30 pm, en el salon de eventos "la Estancia", de antemano, agradecemos su puntualidad para comenzar a tiempo el protocolo, el codigo de vestimenta para el evento es formal.</p>
+            <p>La recepcion se llevara acabo el mismo día a las 7:00 pm, dando inicio con el protocolo a las 7:30 pm, en el salon de eventos "la Estancia", de antemano, agradecemos su puntualidad para comenzar a tiempo el protocolo.</p>
             <a href="https://maps.app.goo.gl/GyKFG2XMdiLdR6xL7" target="_blank" rel="noopener noreferrer">Toca aqui para ver la ubicación</a>
         </div>
         <img src="sources/salon.png" alt="">
