--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <section id="confirmar">
         <div>
         <h1>Confirma asistencia</h1>
-        <a href="sources/certificado.pdf" target="_blank" rel="noopener noreferrer">Confirma asistencia aqui</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdJ7ajQ0UgCi0BbI_dRgBcBoxX7jWNfIpCOT6Vqf2LNVEVYBQ/viewform" target="_blank" rel="noopener noreferrer">Confirma asistencia aqui</a>
         </div>
     </section>
 <script src="js/jquery-3.7.1.min.js"></script>
