--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p>La recepcion se llevara acabo el mismo día a las 7:00 pm, dando inicio con el protocolo a las 7:30 pm, en el salon de eventos "la Estancia", de antemano, agradecemos su puntualidad para comenzar a tiempo el protocolo.</p>
             <a href="sources/salon_estancia.jpeg" target="_blank" rel="noopener noreferrer">Toca aqui para ver la ubicación</a>
         </div>
-        <img src="sources/salon.png" alt="">
+        <img src="sources/salon_estancia.jpeg" alt="">
         </div>
     </section>
     <section id="regalos">
