--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="cf">
             <div class="cft">
             <p>La recepcion se llevara acabo el mismo día a las 7:00 pm, dando inicio con el protocolo a las 7:30 pm, en el salon de eventos "la Estancia", de antemano, agradecemos su puntualidad para comenzar a tiempo el protocolo.</p>
-            <a href="sources/salon_estancia.jpeg" target="_blank" rel="noopener noreferrer">Toca aqui para ver la ubicación</a>
+            <a href="https://maps.app.goo.gl/GyKFG2XMdiLdR6xL7" target="_blank" rel="noopener noreferrer">Toca aqui para ver la ubicación</a>
         </div>
         <img src="sources/salon_estancia.jpeg" alt="">
         </div>
